[gd_scene load_steps=7 format=2]

[ext_resource path="res://Enemy/GenericEnemy.gd" type="Script" id=1]
[ext_resource path="res://assets/penguin_standing.png" type="Texture" id=2]
[ext_resource path="res://assets/penguin_moving.png" type="Texture" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 9.42656, 14.3904 )

[sub_resource type="RectangleShape2D" id=3]

[node name="GenericEnemy" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -36 )
scale = Vector2( 0.08, 0.08 )
frames = SubResource( 1 )
offset = Vector2( 0, 116 )

[node name="BodyCollider" type="CollisionShape2D" parent="."]
position = Vector2( 0, -10 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="LeftWallDetector" type="Area2D" parent="."]
collision_layer = 0

[node name="LeftWallCollider" type="CollisionShape2D" parent="LeftWallDetector"]
position = Vector2( -60, -9 )
scale = Vector2( 0.5, 0.9 )
shape = SubResource( 3 )

[node name="RightWallDetector" type="Area2D" parent="."]
collision_layer = 0

[node name="RightWallCollider" type="CollisionShape2D" parent="RightWallDetector"]
position = Vector2( 60, -9 )
scale = Vector2( 0.5, 0.9 )
shape = SubResource( 3 )

[node name="WalkingTimer" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 2147483656
collision_mask = 2

[node name="HitBoxCollider" type="CollisionShape2D" parent="HitBox"]
position = Vector2( -0.140305, -12.4923 )
rotation = 1.5708
scale = Vector2( 1.3, 1.75 )
shape = SubResource( 2 )
[connection signal="body_entered" from="LeftWallDetector" to="." method="_on_LeftWallDetector_body_entered"]
[connection signal="body_entered" from="RightWallDetector" to="." method="_on_RightWallDetector_body_entered"]
[connection signal="timeout" from="WalkingTimer" to="." method="_on_WalkingTimer_timeout"]
[connection signal="area_shape_entered" from="HitBox" to="." method="_on_HitBox_area_shape_entered"]
[connection signal="body_entered" from="HitBox" to="." method="_on_HitBox_body_entered"]
